--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link href="./assets/css/receitas/receitas.css" rel="stylesheet" />
         <link href="./assets/css/quemsomos/quemSomos.css" rel="stylesheet" />
         <link href="./assets/css/pessoas/pessoas.css" rel="stylesheet" />
+        <link href="./assets/css/logo.css" rel="stylesheet" />
 
     </head>
     <body>
@@ -29,7 +30,7 @@
             </nav>
         </header>
         <section class="banner">
-            <img class="banner__imagem" src="./assets/img/banner.jpg" alt="Banner da Fruta & Fruto">
+            <div class="banner__imagem" alt="Banner da Fruta & Fruto"></div>
             <h2 class="banner__titulo">Reaproveite melhor os alimentos!</h2>
         </section>
 
@@ -110,5 +111,8 @@
                 </div>
             </div>
         </section>
+        <footer class="rodape">
+            Contato: exemplo@email.com
+        </footer>
     </body>
 </html>
